force-app/main/default/objects/TTS_Law_Firm_Matter__c/TTS_Law_Firm_Matter__c.object-meta.xml
<CustomObject>
    <description>[TTS] Law firm matter or docket engagement used to group legal costs and map invoices to TTS records.</description>
    <label>Law Firm Matter</label>
    <nameField>
        <displayFormat>LFM{00000}</displayFormat>
        <label>Law Firm Matter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Law Firm Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>