force-app/main/default/objects/TTS_Law_Firm_Matter__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Summary of the law firm matter, docket, or engagement scope.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>