force-app/main/default/objects/TTS_Law_Firm_Matter__c/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Law Firm Matters</relationshipLabel>
    <relationshipName>Law_Firm_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>