force-app/main/default/objects/TTS_Law_Firm_Matter__c/fields/Law_Firm_Matter_Key__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Matter_Key__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique external key for invoice lookup, usually combining the law firm and matter or docket number.</inlineHelpText>
    <label>Law Firm Matter Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>