force-app/main/default/objects/TTS_Law_Firm_Matter__c/fields/Matter_Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Matter_Docket_Number__c</fullName>
    <inlineHelpText>The law firm's matter or docket number used on invoices.</inlineHelpText>
    <label>Matter/Docket Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>