force-app/main/default/objects/TTS_Law_Firm_Matter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Law_Firm__c</columns>
    <columns>Matter_Docket_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Law_Firm_Matter_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>